# MedicalVisualization

./: CMakeLists.txt
DataReader/: CMakeLists.txt  DataReader.sln  DataReader.vcxproj  Main.cpp
DataReader/Debug/: vc140.idb
DataReader/Debug/DataReader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DataReader.lastbuildstate
DataReader/inc/teem/: gage.h  hest.h
DataReader/include/: testDataPath.h
DataReader/lib/Debug/: freeglutd.lib  glew32d.lib
DataReader/lib/Release/: freeglut.lib  glew32.lib
DataReader/src/: DataReader.h  Definitions.h  Histogram.h  LightRenderingEngine.cpp  LightRenderingEngine.h  Main.cpp  Reader.h  Utilities.h
vtkVisualizer/: Main.cpp
vtkVisualizer/inc/vtk/Common/Core/: vtkConfigure.h  vtkVersionMacros.h
vtkVisualizer/lib/Debug/: vtkCommonCore-6.3.lib  vtkCommonExecutionModel-6.3.lib  vtkFiltersSources-6.3.lib  vtkInteractionStyle-6.3.lib  vtkRenderingCore-6.3.lib
